@@ -1,3 +1,6 @@
+2007-01-17  Satoshi Konno <skonno@cybergarage.org>
+	* Changed to use cg_strdup() instead of strdup() in clog.c.
+
 2007-01-16  Satoshi Konno <skonno@cybergarage.org>
 	* Fixed to compile normally for WindowsCE platforms using Visual Studio 2005 and Windows Mobile 5.0 Pocket PC SDK.
 	* Changed WindowsCE flags from _WIN32_WCE to WINCE.
